<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_song_title_here" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singer"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/singer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_singers_name_here" />

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_year_of_release_here" />

    <TextView
        android:id="@+id/star"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stars"
        android:textSize="20dp"/>

    <RadioGroup
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/R1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1" />

        <RadioButton
            android:id="@+id/R2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2" />

        <RadioButton
            android:id="@+id/R3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3" />

        <RadioButton
            android:id="@+id/R4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4" />

        <RadioButton
            android:id="@+id/R5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insert" />

        <Button
            android:id="@+id/btnShowList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_list" />
    </LinearLayout>

</LinearLayout>